--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "video.js": "^7.20.3",
+    "videojs-contrib-quality-levels": "^2.2.0",
+    "videojs-http-source-selector": "^1.1.6",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
